--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.web.locale-resolver=fixed
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=appatrycjapp@gmail.com
-spring.mail.password=thhg ugub lqkw tjcr 
+spring.mail.username=your mail
+spring.mail.password=your smtp password 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
